--- a/html-css-intro/index.html
+++ b/html-css-intro/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Intro to HTML & CSS</title>
+    <title>Intro to HTML & CSS 2</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta+Mahee">
     <!--font-family: 'Mukta Mahee', sans-serif;-->
@@ -44,13 +44,29 @@
     </section>
     <section class="button">
       <div class="btn">
-        Button
+        <a href="redirect.html">Button</a>
+      </div>
+    </section>
+    <section class="gallery-section">
+      <div class="flex-container">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
+        <img src ="https://i.pinimg.com/236x/2f/b8/61/2fb861b5899ed2baee9f29fafcd5a966--cute-owl-memes-animal-memes-cute.jpg" alt="Owl Meme" class="owl-meme">
       </div>
     </section>
     <section class="copyright">
-      <div class="copyright">
+      <footer class="copyright">
       COPYRIGHT 2018
-      </div>
+      </footer>
     </section>
   </body>
 </html>
