--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,58 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <title></title>
+    <link rel="shortcut icon" href="favicon-rocket.ico" type="image/x-icon">
+    <title>Will Miner's Online Portfolio</title>
   </head>
   <body>
-  <div class="page-background"></div>  
+    <section class="transparent">
+      <div class="full-page-background">
+      </div>
+      <div class="page-content-container">
+        <header id="pageheader">
+          <nav>
+              <a href="pageheader" id="home">
+                Home
+              </a>
+              <a href="aboutme.html">
+                About Me
+              </a>
+              <a href="contact.html">
+                Contact
+              </a>
+          </nav>
+        </header>
+        <div class="center-container">
+          <div class="text-container">
+            <h1>
+              "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
+            </h1>
+          </div>
+        </div>
+        <div class="title-container">
+          <a href="aboutme.html">
+            <h2 class="title">
+              Will Miner
+            </h2>
+            <h3 class="title">
+              Professional Bio
+            </h3>
+          </a>
+        </div>
+        <footer>
+          <div class="footer-flex-container">
+            <a href="https://www.instagram.com/minerwill/" class="social-link">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://soundcloud.com/nerves_music/" class="social-link">
+              <i class="fab fa-soundcloud"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/will-miner-ba7785103/" class="social-link">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </footer>
+      </div>
+    </section>
   </body>
 </html>
