began work on parallax scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,18 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon-rocket.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/favicon-space-shuttle.ico" type="image/x-icon">
     <title>Will Miner's Online Portfolio</title>
   </head>
   <body>
     <section class="transparent">
       <div class="full-page-background">
+        <img src="images/birds-eye-city.jpeg" alt="birds eye view of city">
       </div>
       <div class="page-content-container">
-        <header id="pageheader">
+        <header class="pageheader">
           <nav>
-              <a href="pageheader" id="home">
+              <a href="index.html" id="home">
                 Home
               </a>
               <a href="aboutme.html">
@@ -29,23 +30,29 @@
         </header>
         <div class="center-container">
           <div class="text-container">
-            <h1>
-              "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
-            </h1>
+            <a href="aboutme.html">
+              <div class="overlay">
+                <h1>
+                  "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
+                </h1>
+              </div>
+            </a>
           </div>
         </div>
         <div class="title-container">
           <a href="aboutme.html">
-            <h2 class="title">
-              Will Miner
-            </h2>
-            <h3 class="title">
-              Professional Bio
-            </h3>
+            <div class="overlay">
+              <h2 class="title">
+                Will Miner
+              </h2>
+              <h3 class="title">
+                Professional Bio
+              </h3>
+            </div>
           </a>
         </div>
-        <footer>
-          <div class="footer-flex-container">
+        <footer class="index-footer">
+          <div class="footer-container">
             <a href="https://www.instagram.com/minerwill/" class="social-link">
               <i class="fab fa-instagram"></i>
             </a>
