finished midterm assignment

--- a/src/contact.html
+++ b/src/contact.html
@@ -25,6 +25,37 @@
         </nav>
       </header>
       <div class="center-container">
+        <div class="contactimg">
+          <div class="contactform">
+            <span id="formtitle">
+              Let's connect.
+              <h3 id="formmsg">
+                Send me a message below
+              </h3>
+            </span>
+            <section class="forminputs">
+              <div class="inputs-container">
+                <label class=> Name
+                  <input name="fullname" type="text" placeholder="Enter your full name" class="userinput">
+                </label>
+                <label> Email
+                  <input name="email" type="text" placeholder="Enter your email" class="userinput">
+                </label>
+                <label> Phone Number (Optional)
+                  <input name="phonenumber" type="tel" placeholder="Enter your phone number" class="userinput">
+                </label>
+                <div class="contact-div">
+                  Type your message below
+                </div>
+                <textarea cols="30" rows="7" maxlength="200" id="textbox"></textarea>
+                <br>
+                <div class="submit-div">
+                  <input type="submit" value="Send">
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
       </div>
       <footer class="contact-footer">
         <div class="contact-footer-container">
