--- a/src/aboutme.html
+++ b/src/aboutme.html
@@ -28,10 +28,12 @@
 
         <div class="firstplaximg">
           <div class="caption">
-            <span class="border">
+            <span class="container-title">
               Will Miner
               <br>
-              Software Developer from the Pacific Northwest
+              <h2 id="h2-title">
+                Software Developer from the Pacific Northwest
+              </h2
             </span>
           </div>
         </div>
@@ -46,9 +48,59 @@
         </div>
 
         <div class="secondplaximg">
-          <div class="caption">
-            <span class="border">
+          <div class="caption2">
+            <span>
+              Projects & Work Experience
             </span>
+          </div>
+        </div>
+
+        <div class="projects-and-past-work whoamibio">
+          <h2>
+            Projects
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <h2>
+            Work Experience
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+
+        <div class="thirdplaximg">
+          <div class="caption2">
+            <span class="container-title" id="hobbiesid">
+              Hobbies
+            </span>
+          </div>
+        </div>
+
+        <div class="hobbies whoamibio">
+          <h2>
+            Software Development
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <h2>
+            Music
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+
+
+        <div class="bottomplaximg">
+          <div class="caption">
+            <a href="contact.html">
+              <span class="container-title" id="link-title">
+                Want to get in touch?
+              </span>
+            </a>
           </div>
         </div>
 
