--- a/src/index.html
+++ b/src/index.html
@@ -30,24 +30,29 @@
         </header>
         <div class="center-container">
           <div class="text-container">
-            <a href="aboutme.html">
-              <div class="overlay">
-                <h1>
-                  "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
-                </h1>
-              </div>
-            </a>
+            <div class="overlay title1">
+              <h1>
+                "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
+              </h1>
+            </div>
+            <div class="overlay title2">
+              <h1>
+                "Design is not just what it looks like and feels like. Design is how it works."
+              </h1>
+            </div>
           </div>
         </div>
         <div class="title-container">
           <a href="aboutme.html">
             <div class="overlay">
-              <h2 class="title">
-                Will Miner
-              </h2>
-              <h3 class="title">
-                Professional Bio
-              </h3>
+              <span>
+                <h2 class="title">
+                  Will Miner
+                </h2>
+                <h3 class="title">
+                  Professional Bio
+                </h3>
+              </span>
             </div>
           </a>
         </div>
