--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <title></title>
   </head>
   <body>
-    <!-- Body content goes here -->
+    <script src="index.js"></script>
   </body>
 </html>
