--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <title></title>
-  </head>
-  <body>
-    <!-- Body content goes here -->
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <!--<meta name="description" content="Description Here">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <script src="js/jquery-3.3.1.js"></script>
+        <title>JS - jQuery</title>
+    </head>
+    <body>
+      <header id="header">
+        <h1> Company Info </h1>
+      </header>
+      <section id="users">
+        <!-- populate users here -->
+      </section>
+    </body>
+    <script src="js/index.js"></script>
 </html>
