progressing on final

--- a/src/aboutme.html
+++ b/src/aboutme.html
@@ -22,6 +22,12 @@
             <a href="contact.html">
               Contact
             </a>
+            <a href="maps.html">
+              Maps
+            </a>
+            <a href="api.html">
+              API
+            </a>
         </nav>
       </header>
       <div class="center-container">
@@ -119,5 +125,6 @@
         </div>
       </footer>
     </div>
+    <script src="aboutme.js"></script>
   </body>
 </html>
