--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
               <a href="contact.html">
                 Contact
               </a>
+              <a href="maps.html">
+                Maps
+              </a>
+              <a href="api.html">
+                API
+              </a>
           </nav>
         </header>
         <div class="center-container">
@@ -71,5 +77,6 @@
         </footer>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
