--- a/src/maps.html
+++ b/src/maps.html
@@ -29,7 +29,15 @@
             </a>
         </nav>
       </header>
-      <div id="map" class="center-container">
+      <div id="mapinfo">
+        <p> I decided to put on my map markers for the birthplaces of my parents and myself.</p>
+        <ul>
+          <li> Seattle, WA - my Birthplace</li>
+          <li> Casper, WY - my Mom's Birthplace</li>
+          <li> Boston, MA - my Dad's Birthplace</li>
+        </ul>
+      </div>
+      <div id="map" class="map-center-container">
       </div>
       <script src="maps.js">
       </script>
